kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: erpnet-fp-mec
  labels:
    com.blconsulting.stack: erpnet-fp
    com.blconsulting.tenant: mec
